# FMI-Data

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: BuildDataset.py  BuildFMIGraph.py  FetchSelectedData.py  selected_stations.json  selectstations.py
data/dataset/: 101289.csv  101291.csv  101479.csv  101481.csv  101528.csv  101775.csv  101783.csv  107201.csv  _meta.json  _scaler.json
data/graphs/: _summary.json  system_a.npz  system_b.npz
data/stations/: 101044.csv  101061.csv  101064.csv  101256.csv  101267.csv  101268.csv  101289.csv  101291.csv  101479.csv  101481.csv  101528.csv  101661.csv  101662.csv  101675.csv  101689.csv  101775.csv  101783.csv  101784.csv  101785.csv  101786.csv  101787.csv  101840.csv  101846.csv  101851.csv  107201.csv  _fetch_summary.json
