[project]
name = "fmi-data"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fmiopendata>=0.5.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pooch>=1.9.0",
]
